z-index fixed

--- a/style.css
+++ b/style.css
@@ -148,7 +148,10 @@ header {
   background-color: #fecf62;
 }
 
-
+.intro .max-width-large{
+  position:relative;
+  z-index:2;
+}
 
 .seinfeld,
 .wonka {
